--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body {
 }
 
 a {
-    @apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600
+    @apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600;
 }
 
 .bg-striped {
