new branch commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,7 +71,7 @@
         <!-- Dinks Logo-->
         <div class="flex flex-1 items-center justify-center lg:items-stretch lg:justify-start">
           <div class="flex flex-shrink-0 items-center">
-            <a routerLink="home" class="hover:cursor-pointer hover:opacity-90">
+            <a routerLink="home" class="hover:cursor-pointer hover:opacity-80">
               <img class="hidden lg:block h-7 xl:h-10 w-auto" src="logos/combinedIconHorizontal.png" alt="Your Company">
               <img class="lg:hidden h-10 w-auto" src="logos/logoIcon.png" alt="Your Company" (click)="toggleMenu(true)">
             </a>
@@ -106,8 +106,8 @@
               </a>
 
               <a routerLink="reserve"
-                class="no-underline rounded-md px-3 py-2 text-sm font-medium text-red-500 border-2 border-red-500 hover:border-red-700 hover:text-red-700 visited:text-red-700"
-                routerLinkActive=" border-red-700 bg-red-700 active-link">Reserve
+                class="no-underline rounded-md px-3 py-2 text-sm font-medium text-maddie-red border-2 border-maddie-red hover:border-red-700 hover:text-red-700 visited:text-red-700"
+                routerLinkActive="border-red-700 bg-red-700 active-link">Reserve
                 a court</a>
             </div>
           </div>
@@ -135,7 +135,7 @@
           class="no-underline block rounded-md px-3 py-2 text-base font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
           routerLinkActive="bg-blue-900 border-blue-900 active-link">About</a>
         <a routerLink="reserve"
-          class="no-underline block rounded-md px-3 py-2 text-base font-medium text-red-500 border-2 border-red-500 hover:border-red-700 hover:text-red-700 visited:text-red-700"
+          class="no-underline block rounded-md px-3 py-2 text-base font-medium text-maddie-red border-2 border-maddie-red hover:border-red-700 hover:text-red-700 visited:text-red-700"
           routerLinkActive="border-red-700 bg-red-700 active-link">Reserve
           a court</a>
       </div>
