--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,66 +16,10 @@
 </article> -->
 
 <div class="container mx-auto px-2 sm:px-6 lg:px-8">
-    <section class="flex mt-36">
-        <article class="p-5">
-            <div class="grid grid-cols-2 mb-5">
-                <h2 class="self-center text-4xl font-header text-center">The Lanning Family</h2>
-                <div class="justify-self-start rounded w-10/12 bg-striped -rotate-3 p-6 shadow-2xl">
-                    <img src="lanningFamily.jpg" />
-                </div>
-
-            </div>
-            <p>
-                David and Bailey started playing pickleball about 5 years ago after Bailey’s parents, Kirk and Beth
-                Meints
-                introduced them to the sport. Like most, once we started playing we quickly became addicted. We even
-                took a
-                family cruise with Engage Pickleball for a week of pickleball training which introduced us to the
-                founders
-                of
-                Engage. David continues to play for Team Engage as a sponsored player. Pickleball has had a huge,
-                positive
-                impact on our lives making so many life long friends, allowing us to travel many states for tournaments
-                and
-                provides an outlet for our competitiveness! Our whole family family will be heading to Texas in November
-                to
-                support Bailey who will be playing 5.0 Women’s doubles at Nationals.
-                <br>
-                <br>
-                Dinks represents both a passion for pickleball while at the same time an opportunity to respond to the
-                overwhelming need for proper indoor facilities for the growing pickleball demographic in the greater Des
-                Moines
-                area.
-                <br>
-                <br>
-                Outside of Dinks, David works full time as a Regional Sales Manager for a Cyber Security Start Up
-                covering
-                Enterprise Accounts across 16 states and enjoys coaching both his girls Soccer team.
-                <br>
-                <br>
-                Bailey is a licensed Mental Health Therapist and owns her own private practice. She is very involved in
-                our
-                kids
-                activities, sits on boards, PTO and coaches the girls Volleyball team.
-                <br>
-                <br>
-                Campbell & Lolo are Dinks VPs of Youth Experience. While they are up and coming pickleball stars - they
-                also
-                focus their time on soccer, volleyball, tumbling, track & field, tennis, and basketball!
-                <br>
-                <br>
-                We could not be more excited to open Dinks and in addition to 13 dedicated courts - provide training,
-                tournaments, leagues, events and most of all a central hub for the Des Moines Pickleball community!!
-                <br>
-                <br>
-                We sincerely appreciate your support!
-                David Lanning Bailey Saal-Lanning
-            </p>
-        </article>
-
-        <article class="p-5">
-            <div class="grid grid-cols-2 mb-5">
-                <h2 class="self-center text-4xl font-header text-center">The Douglass Family</h2>
+    <section class="md:flex mt-36">
+        <article class="mb-10 md:md-0 p-5">
+            <div class="lg:grid lg:grid-cols-2 mb-6">
+                <h2 class="mb-6 lg:mb-0 self-center text-5xl font-header text-center">The Douglass Family</h2>
                 <div class="justify-self-start rounded h-10/12 bg-striped rotate-3 p-6 shadow-2xl">
                     <img src="douglassFamily.jpg" />
                 </div>
@@ -127,5 +71,62 @@
                 We are excited to bring Dinks to life and appreciate the incredible support we have received so far.
             </p>
         </article>
+
+        <article class="p-5">
+            <div class="lg:grid lg:grid-cols-2 mb-6">
+                <h2 class="mb-6 lg:mb-0 self-center text-5xl font-header text-center">The Lanning Family</h2>
+                <div class="justify-self-start rounded w-10/12 bg-striped -rotate-3 p-6 shadow-2xl">
+                    <img src="lanningFamily.jpg" />
+                </div>
+            </div>
+            <p>
+                David and Bailey started playing pickleball about 5 years ago after Bailey’s parents, Kirk and Beth
+                Meints
+                introduced them to the sport. Like most, once we started playing we quickly became addicted. We even
+                took a
+                family cruise with Engage Pickleball for a week of pickleball training which introduced us to the
+                founders
+                of
+                Engage. David continues to play for Team Engage as a sponsored player. Pickleball has had a huge,
+                positive
+                impact on our lives making so many life long friends, allowing us to travel many states for tournaments
+                and
+                provides an outlet for our competitiveness! Our whole family family will be heading to Texas in November
+                to
+                support Bailey who will be playing 5.0 Women’s doubles at Nationals.
+                <br>
+                <br>
+                Dinks represents both a passion for pickleball while at the same time an opportunity to respond to the
+                overwhelming need for proper indoor facilities for the growing pickleball demographic in the greater Des
+                Moines
+                area.
+                <br>
+                <br>
+                Outside of Dinks, David works full time as a Regional Sales Manager for a Cyber Security Start Up
+                covering
+                Enterprise Accounts across 16 states and enjoys coaching both his girls Soccer team.
+                <br>
+                <br>
+                Bailey is a licensed Mental Health Therapist and owns her own private practice. She is very involved in
+                our
+                kids
+                activities, sits on boards, PTO and coaches the girls Volleyball team.
+                <br>
+                <br>
+                Campbell & Lolo are Dinks VPs of Youth Experience. While they are up and coming pickleball stars - they
+                also
+                focus their time on soccer, volleyball, tumbling, track & field, tennis, and basketball!
+                <br>
+                <br>
+                We could not be more excited to open Dinks and in addition to 13 dedicated courts - provide training,
+                tournaments, leagues, events and most of all a central hub for the Des Moines Pickleball community!!
+                <br>
+                <br>
+                We sincerely appreciate your support!
+                David Lanning Bailey Saal-Lanning
+            </p>
+        </article>
+
+
     </section>
 </div>
