--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
                 The best place to play in DSM</h1>
 
             <div class="hidden md:flex justify-center items-center md:mx-10 lg:mx-40 mb-10">
-                <span class="mr-2 text-right"
+                <span class="mr-2 text-right text-shadow-lg-green"
                     style="font-family: 'futura-pt', sans-serif; font-weight: 400; font-style: normal; font-size: 12rem; line-height: 1;">13</span>
                 <p class="text-lg md:text-5xl text-left ml-2"
                     style="font-family: 'futura-pt', sans-serif; font-weight: 400; font-style: normal; line-height: 1.4 !important;">
@@ -18,7 +18,7 @@
 
             <div class="md:hidden block text-center mb-10">
                 <p class="text-9xl" style="font-family: 'futura-pt', sans-serif; font-weight: 400; font-style: normal;">
-                    <span class="text-shadow-lg-green">13</span>
+                    <span class="text-shadow-md-green">13</span>
                 </p>
                 <p class="text-2xl"
                     style="font-family: 'futura-pt', sans-serif; font-weight: 400; font-style: normal; line-height: 1.4 !important;">
@@ -73,7 +73,7 @@
     </div>
 </section>
 
-<section id="memberships"
+<!-- <section id="memberships"
     class="container mx-auto px-2 sm:px-6 lg:px-8 mt-10 text-center border-b-2 border-b-gray-300 pb-20">
     <h1 class="inline-block text-4xl md:text-6xl mx-16 sm:mx-8"
         style="font-family: 'futura-pt', sans-serif; font-weight: 500; font-style: normal;">
@@ -109,7 +109,7 @@
 
 
     </article>
-</section>
+</section> -->
 
 <!-- Memberships -->
 <section id="memberships"
@@ -119,47 +119,51 @@
         Become a member</h1>
 
     <article class="mt-16 flex justify-center">
-        <table class="border-spacing-2">
+        <table class="mx-8 lg:mx-0">
             <!-- Headers -->
             <thead class="border-b-2 border-maddie-green">
                 <tr>
-                    <th class="border-r-4 border-maddie-green"></th>
-                    <th class="text-xl">book in advance</th>
-                    <th class="text-xl">open play rates</th>
-                    <th class="text-xl">early event access</th>
+                    <th class="p-3 md:p-4 lg:p-5 border-r-4 border-maddie-green"></th>
+                    <th class="p-3 md:p-4 lg:p-5 text-xl">book in advance</th>
+                    <th class="p-3 md:p-4 lg:p-5 text-xl">open play rates</th>
+                    <th class="p-3 md:p-4 lg:p-5 text-xl">early event access</th>
                 </tr>
             </thead>
             <tbody>
                 <!-- Limited -->
                 <tr class="border-b-2 border-maddie-green">
-                    <td class="border-r-4 border-maddie-green"><span class="text-4xl">Limited</span><br><span
-                            class="text-xl">$45
+                    <td class="p-3 md:p-4 lg:p-5 border-r-4 border-maddie-green"><span
+                            class="text-4xl">Limited</span><br><span class="text-xl">$45
                             per year</span></td>
-                    <td class="text-xl">5<br>days</td>
-                    <td class="text-xl">$9</td>
-                    <td class="text-xl"></td>
+                    <td class="p-3 md:p-4 lg:p-5 text-xl">5<br>days</td>
+                    <td class="p-3 md:p-4 lg:p-5 text-xl">$9</td>
+                    <td class="p-3 md:p-4 lg:p-5 text-xl"></td>
                 </tr>
                 <!-- Standard -->
                 <tr class="border-b-2 border-maddie-green">
-                    <td class="border-r-4 border-maddie-green"><span class="text-4xl">Standard</span><br><span
-                            class="text-xl">$145 per year</span></td>
-                    <td class="text-xl">2<br>weeks</td>
-                    <td class="text-xl">$8</td>
-                    <td class="text-xl flex justify-center items-center"><img class="w-20" src="pickleball_icon.png" />
+                    <td class="p-3 md:p-4 lg:p-5 border-r-4 border-maddie-green"><span
+                            class="text-4xl">Standard</span><br><span class="text-xl">$145 per year</span></td>
+                    <td class="p-3 md:p-4 lg:p-5 text-xl">2<br>weeks</td>
+                    <td class="p-3 md:p-4 lg:p-5 text-xl">$8</td>
+                    <td class="p-3 md:p-4 lg:p-5 text-xl flex justify-center items-center"><img class="w-20"
+                            src="pickleball_icon.png" />
                 </tr>
                 <!-- VIP -->
                 <tr class="border-b-2 border-maddie-green">
-                    <td class="border-r-4 border-maddie-green"><span class="text-4xl">VIP</span><br><span
-                            class="text-xl">$195
+                    <td class="p-3 md:p-4 lg:p-5 border-r-4 border-maddie-green"><span
+                            class="text-4xl">VIP</span><br><span class="text-xl">$195
                             per year</span></td>
-                    <td class="text-xl">6<br>months</td>
-                    <td class="text-xl">$7</td>
-                    <td class="text-xl flex justify-center items-center"><img class="w-20" src="pickleball_icon.png" />
+                    <td class="p-3 md:p-4 lg:p-5 text-xl">6<br>months</td>
+                    <td class="p-3 md:p-4 lg:p-5 text-xl">$7</td>
+                    <td class="p-3 md:p-4 lg:p-5 text-xl flex justify-center items-center"><img class="w-20"
+                            src="pickleball_icon.png" />
                     </td>
                 </tr>
                 <tr>
-                    <td class="border-r-4 border-maddie-green"></td>
-                    <td class="text-xl" colspan="3">* all memberships come with personalized door code access</td>
+                    <td class="p-3 md:p-4 lg:p-5 border-r-4 border-maddie-green"></td>
+                    <td class="p-3 md:p-4 lg:p-5 text-xl" colspan="3">* all memberships come with personalized door code
+                        access
+                    </td>
                 </tr>
             </tbody>
         </table>
