--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,7 @@ th,
 td {
     color: white;
     text-align: center;
-    padding: 1.25rem;
+    // padding: 1.25rem;
 
     font-family: 'futura-pt', sans-serif;
     font-weight: 400;
