--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
-      <p class="text-sm leading-6 text-gray-900">
+      <p class="text-sm text-center leading-6 text-gray-900">
         <strong class="font-semibold">Des Moines Pickleball Team Classic</strong><svg viewBox="0 0 2 2"
           class="mx-2 inline h-0.5 w-0.5 fill-current" aria-hidden="true">
           <circle cx="1" cy="1" r="1" />
@@ -84,19 +84,22 @@
             <div class="hidden lg:block space-x-2">
               <a routerLink="home"
                 class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900  hover:border-blue-900 hover:text-white visited:text-gray-900"
-                routerLinkActive="bg-blue-700 border-blue-700 active-link">Home</a>
-              <a routerLink="rates-memberships"
+                routerLinkActive="bg-blue-700 border-blue-700 active-link"
+                onclick="window.scrollTo({ top: 0 })">Home</a>
+              <!-- <a routerLink="rates-memberships"
                 class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900  hover:border-blue-900 hover:text-white visited:text-gray-900"
-                routerLinkActive="bg-blue-700 border-blue-700 active-link">Rates</a>
+                routerLinkActive="bg-blue-700 border-blue-700 active-link">Rates</a> -->
               <a routerLink="leagues-tournaments"
                 class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
-                routerLinkActive="bg-blue-700 border-blue-700 active-link">Leagues/Tournaments</a>
+                routerLinkActive="bg-blue-700 border-blue-700 active-link"
+                onclick="window.scrollTo({ top: 0 })">Leagues/Tournaments</a>
               <a routerLink="instruction"
                 class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
-                routerLinkActive="bg-blue-700 border-blue-700 active-link">Instruction</a>
+                routerLinkActive="bg-blue-700 border-blue-700 active-link"
+                onclick="window.scrollTo({ top: 0 })">Instruction</a>
               <a routerLink="about"
                 class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 text-gray-900 hover:bg-blue-900 hover:border-blue-900 hover:text-white visited:text-gray-900"
-                routerLinkActive="bg-blue-700 border-blue-700 active-link">About
+                routerLinkActive="bg-blue-700 border-blue-700 active-link" onclick="window.scrollTo({ top: 0 })">About
                 Us</a>
 
               <a href="https://maps.app.goo.gl/pfU4YHvtoYF1QonE9" target="_blank"
@@ -107,7 +110,7 @@
 
               <a routerLink="reserve"
                 class="no-underline rounded-md px-3 py-2 text-sm font-medium text-maddie-red border-2 border-maddie-red hover:border-red-700 hover:text-red-700 visited:text-red-700"
-                routerLinkActive="border-red-700 bg-red-700 active-link">Reserve
+                routerLinkActive="border-red-700 bg-red-700 active-link" onclick="window.scrollTo({ top: 0 })">Reserve
                 a court</a>
             </div>
           </div>
@@ -121,22 +124,26 @@
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
         <a routerLink="home"
           class="no-underline block rounded-md px-3 py-2 text-base font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
-          routerLinkActive="bg-blue-900 border-blue-790000 active-link">Home</a>
-        <a routerLink="rates-memberships"
+          routerLinkActive="bg-blue-900 border-blue-790000 active-link" onclick="window.scrollTo({ top: 0 })">Home</a>
+        <!-- <a routerLink="rates-memberships"
           class="no-underline block rounded-md px-3 py-2 text-base font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
-          routerLinkActive="bg-blue-900 border-blue-900 active-link">Rates</a>
+          routerLinkActive="bg-blue-900 border-blue-900 active-link">Rates</a> -->
         <a routerLink="leagues-tournaments"
           class="no-underline block rounded-md px-3 py-2 text-base font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
-          routerLinkActive="bg-blue-900 border-blue-900 active-link">Leagues/Tournaments</a>
+          routerLinkActive="bg-blue-900 border-blue-900 active-link"
+          onclick="window.scrollTo({ top: 0 })">Leagues/Tournaments</a>
         <a routerLink="instruction"
           class="no-underline block rounded-md px-3 py-2 text-base font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
-          routerLinkActive="bg-blue-900 border-blue-900 active-link">Instruction</a>
+          routerLinkActive="bg-blue-900 border-blue-900 active-link"
+          onclick="window.scrollTo({ top: 0 })">Instruction</a>
         <a routerLink="about"
           class="no-underline block rounded-md px-3 py-2 text-base font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
-          routerLinkActive="bg-blue-900 border-blue-900 active-link">About</a>
+          routerLinkActive="bg-blue-900 border-blue-900 active-link"
+          onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">About</a>
         <a routerLink="reserve"
           class="no-underline block rounded-md px-3 py-2 text-base font-medium text-maddie-red border-2 border-maddie-red hover:border-red-700 hover:text-red-700 visited:text-red-700"
-          routerLinkActive="border-red-700 bg-red-700 active-link">Reserve
+          routerLinkActive="border-red-700 bg-red-700 active-link"
+          onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">Reserve
           a court</a>
       </div>
     </div>
