--- a/src/app/instruction/instruction.component.html
+++ b/src/app/instruction/instruction.component.html
@@ -1,7 +1,7 @@
-<div class="container mx-auto px-2 sm:px-6 lg:px-8">
-    <h1 class="text-5xl text-center mt-36 mb-12 font-header">Professional Instruction</h1>
+<div class="container mx-auto px-5 sm:px-6 lg:px-8">
+    <h1 class="text-5xl text-center mt-36 mb-5 font-header">Professional Instruction</h1>
 
-    <article class="flex max-xl:flex-col">
+    <article class="flex max-xl:flex-col p-5">
         <div class="xl:w-full xl:mr-16 max-xl:mb-10 content-center">
             <p>
                 We offer private 1:1 Instruction, Group Instruction, Youth training in addition to a variety of Clinics
